[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets (2)/dodge_assets/art/img_31991-ff18d70fb3da82e83216117902469853-480-0.jpg" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 1 )
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 179.0
margin_top = 213.0
margin_right = 300.0
margin_bottom = 507.0
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 121.0
margin_bottom = 14.0
text = "Dodge the Creeps!"

[node name="Single Player" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 121.0
margin_bottom = 54.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Single Player"

[node name="Local MultiPlayer" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 121.0
margin_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Local MultiPlayer"

[node name="Multi Player" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 121.0
margin_bottom = 134.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "MultiPlayer"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 121.0
margin_bottom = 174.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Settings"

[node name="Highscores" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 121.0
margin_bottom = 214.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Highscores"

[node name="About" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 121.0
margin_bottom = 254.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "About"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 121.0
margin_bottom = 294.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Single Player" to="." method="_on_Single_Player_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Local MultiPlayer" to="." method="_on_Local_MultiPlayer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
